--- a/links.html
+++ b/links.html
@@ -74,8 +74,8 @@
 			</div>
 		</header>	
 		<div class="main"
-		style="background-image: -webkit-gradient(linear, 100% 0%, 0% 0%,color-stop(0, rgb(109, 139, 249)),color-stop(1, rgb(115, 105, 192))); background-image: -webkit-repeating-linear-gradient(right,rgb(109, 139, 249) 0%,rgb(115, 105, 192) 100%); background-image: repeating-linear-gradient(to left,rgb(109, 139, 249) 0%,rgb(115, 105, 192) 100%);background-image: -ms-repeating-linear-gradient(right,rgb(109, 139, 249) 0%,rgb(115, 105, 192) 100%);
-		color: #FFFFFF;--elems-color: #FFFFFF;
+		style="background-image: -webkit-gradient(linear, 100% 0%, 0% 0%,color-stop(0, rgb(156, 136, 112)),color-stop(1, rgb(232, 219, 200))); background-image: -webkit-repeating-linear-gradient(right,rgb(156, 136, 112) 0%,rgb(232, 219, 200) 100%); background-image: repeating-linear-gradient(to left,rgb(156, 136, 112) 0%,rgb(232, 219, 200) 100%);background-image: -ms-repeating-linear-gradient(right,rgb(156, 136, 112) 0%,rgb(232, 219, 200) 100%);
+		color: #243154;--elems-color: #243154;
 "
 >
 
@@ -88,7 +88,7 @@
 								<div class="stories__slide" title="llәрқaшaнkүлiмдeпжүр">
 									<a href="./tags/./llәrқashankүlimdepzhүr.html">
 										<div class="stories__slide-pic" style="background-image: url(./img/og/llәrқashankүlimdepzhүr.png);"></div>
-										<div class="stories__slide-txt" style="		color: #FFFFFF;
+										<div class="stories__slide-txt" style="		color: #243154;
 ">llәрқaшaнkүлiмдeпжүр</div>
 									</a>
 								</div>
@@ -97,7 +97,7 @@
 								<div class="stories__slide" title="армандарорындаладымақсатыңайқынболса">
 									<a href="./tags/./armandaroryndaladymaқsatyңayқynbolsa.html">
 										<div class="stories__slide-pic" style="background-image: url(./img/og/armandaroryndaladymaқsatyңayқynbolsa.png);"></div>
-										<div class="stories__slide-txt" style="		color: #FFFFFF;
+										<div class="stories__slide-txt" style="		color: #243154;
 ">армандарорындаладымақсатыңайқынболса</div>
 									</a>
 								</div>
@@ -106,7 +106,7 @@
 								<div class="stories__slide" title="ktбақыт">
 									<a href="./tags/./ktbaқyt.html">
 										<div class="stories__slide-pic" style="background-image: url(./img/og/ktbaқyt.png);"></div>
-										<div class="stories__slide-txt" style="		color: #FFFFFF;
+										<div class="stories__slide-txt" style="		color: #243154;
 ">ktбақыт</div>
 									</a>
 								</div>
@@ -115,7 +115,7 @@
 								<div class="stories__slide" title="ktклуб">
 									<a href="./tags/./ktklub.html">
 										<div class="stories__slide-pic" style="background-image: url(./img/og/ktklub.png);"></div>
-										<div class="stories__slide-txt" style="		color: #FFFFFF;
+										<div class="stories__slide-txt" style="		color: #243154;
 ">ktклуб</div>
 									</a>
 								</div>
@@ -124,7 +124,7 @@
 								<div class="stories__slide" title="баста">
 									<a href="./tags/./basta.html">
 										<div class="stories__slide-pic" style="background-image: url(./img/og/basta.png);"></div>
-										<div class="stories__slide-txt" style="		color: #FFFFFF;
+										<div class="stories__slide-txt" style="		color: #243154;
 ">баста</div>
 									</a>
 								</div>
@@ -133,7 +133,7 @@
 								<div class="stories__slide" title="втоmnсvv">
 									<a href="./tags/./vtomnsvv.html">
 										<div class="stories__slide-pic" style="background-image: url(./img/og/vtomnsvv.png);"></div>
-										<div class="stories__slide-txt" style="		color: #FFFFFF;
+										<div class="stories__slide-txt" style="		color: #243154;
 ">втоmnсvv</div>
 									</a>
 								</div>
@@ -142,7 +142,7 @@
 								<div class="stories__slide" title="аламан">
 									<a href="./tags/./alaman.html">
 										<div class="stories__slide-pic" style="background-image: url(./img/og/alaman.png);"></div>
-										<div class="stories__slide-txt" style="		color: #FFFFFF;
+										<div class="stories__slide-txt" style="		color: #243154;
 ">аламан</div>
 									</a>
 								</div>
@@ -151,7 +151,7 @@
 								<div class="stories__slide" title="алматы">
 									<a href="./tags/./almaty.html">
 										<div class="stories__slide-pic" style="background-image: url(./img/og/almaty.png);"></div>
-										<div class="stories__slide-txt" style="		color: #FFFFFF;
+										<div class="stories__slide-txt" style="		color: #243154;
 ">алматы</div>
 									</a>
 								</div>
@@ -160,7 +160,7 @@
 								<div class="stories__slide" title="ktлайк">
 									<a href="./tags/./ktlayk.html">
 										<div class="stories__slide-pic" style="background-image: url(./img/og/ktlayk.png);"></div>
-										<div class="stories__slide-txt" style="		color: #FFFFFF;
+										<div class="stories__slide-txt" style="		color: #243154;
 ">ktлайк</div>
 									</a>
 								</div>
@@ -169,7 +169,7 @@
 								<div class="stories__slide" title="мастер класс">
 									<a href="./tags/./master-klass.html">
 										<div class="stories__slide-pic" style="background-image: url(./img/og/master-klass.png);"></div>
-										<div class="stories__slide-txt" style="		color: #FFFFFF;
+										<div class="stories__slide-txt" style="		color: #243154;
 ">мастер класс</div>
 									</a>
 								</div>
@@ -178,7 +178,7 @@
 								<div class="stories__slide" title="бизнес бастау">
 									<a href="./tags/./biznes-bastau.html">
 										<div class="stories__slide-pic" style="background-image: url(./img/og/biznes-bastau.png);"></div>
-										<div class="stories__slide-txt" style="		color: #FFFFFF;
+										<div class="stories__slide-txt" style="		color: #243154;
 ">бизнес бастау</div>
 									</a>
 								</div>
@@ -197,9 +197,8 @@
 
 					<div class="links-page-messagers count-1">
 						<a href="https://www.instagram.com/sayatahmethan_" target="_blank" style="
-background-color: Transparent;
-border: 1px solid #FFFFFF;
-color: #FFFFFF;
+background: #243154;
+color: #C6BB73;
 "
 							class="links-page-messager">
 							<i class="fa fa-instagram" aria-hidden="true">
@@ -211,53 +210,23 @@ color: #FFFFFF;
 
 						<div style="
 background-color: Transparent;
-border: 1px solid #FFFFFF;
+border: 2px solid #C6BB73;
 " class="links-page-blc">
 							<div class="links-page-blc__title">Заказать обратный звонок</div>
 							<div class="links-page-blc__txt">Оставьте в этом поле свой телефон, и я перезвоню вам в ближайшее время.</div>
 							<form action="https://admapi.itsinsta.site/api/profiles/sayatahmethan_/messages" method="post" class="links-page-blc__form">
 								<input type="tel" name="contact" class="links-page-blc__input" required placeholder="Введите телефон" style="
 background-color: Transparent;
-border: 1px solid #FFFFFF;
---brd-color: #FFFFFF;
-color: #FFFFFF;
+--brd-color: #243154;
+color: #243154;
 "/>
 								<button style="
-background-color: Transparent;
-border: 1px solid #FFFFFF;
-color: #FFFFFF;
+background-color: #243154;
+color: #C6BB73;
 " class="btn links-page-blc__btn">Отправить запрос</button>
 							</form>
 							<div id="leadSent" class="links-page-blc__txt"></div>
 						</div>
-
-
-
-						<div class="links-page-btn-pic">
-							<center><img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82291063_175619160511614_6559901807181624103_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=2sqUlO1e1DEAX_gvXA6&oh=4792ee85fec7f6fe69418d343f0da46a&oe=5EC64D97" alt="">
-							</img></center>
-						</div>
-
-
-
-
-
-						<a href="https://m.youtube.com/watch?v=c7dKbBksXUg&feature=youtu.be" class="links-page-btn " style="
-border: 1px solid #FFFFFF;
-background-color: Transparent;
---elems-color: ;
---elems-hover: ;
-color: #FFFFFF;
-" 
-						target="_blank"
->
-
-							<strong>
-								Сайт
-							</strong>
-						</a>
-
-
 					</div>
 				</div>
 			</div>	
@@ -277,7 +246,7 @@ color: #FFFFFF;
 										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/75284446_193327011825233_3477503653942516291_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=EjgC7hto3h8AX_cXoR5&oh=f66ec32fb10d5e7274454082a2c3625e&oe=5ED9AAD7" alt="АРМАН-> МАҚСАТ-> ІС- ӘРЕКЕТ->">
 									</div>
 									<div class="article-more__item-name" style="
-		color: #FFFFFF;
+		color: #243154;
 ">АРМАН-> МАҚСАТ-> ІС- ӘРЕКЕТ-></div>
 								</a>
 								<a href="./xx-x2020x-zhyly-zhetken-zhetіstіkterіm.html" class="article-more__item">
@@ -288,7 +257,7 @@ color: #FFFFFF;
 										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/78813973_817282122053881_3899741372767422860_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=IpQY7Sg6_vYAX9BetZi&oh=3a50485d029549d6d698bcdc2ff68c1d&oe=5EBB3AF6" alt="😊 «2020» жылы жеткен жетістіктерім">
 									</div>
 									<div class="article-more__item-name" style="
-		color: #FFFFFF;
+		color: #243154;
 ">😊 «2020» жылы жеткен жетістіктерім</div>
 								</a>
 								<a href="./xx-қayyrly-kүn-қalayyқx-mұnda.html" class="article-more__item">
@@ -299,7 +268,7 @@ color: #FFFFFF;
 										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82234340_108761900658007_8952337626418518331_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=axEDHObr5OoAX8FOQfC&oh=ae5922409974367fc2662e03a6266bfb&oe=5EC50B1F" alt="👋 Қайырлы күн Қалайық, Мұнда">
 									</div>
 									<div class="article-more__item-name" style="
-		color: #FFFFFF;
+		color: #243154;
 ">👋 Қайырлы күн Қалайық, Мұнда</div>
 								</a>
 								<a href="./xxmen-өmіrge-ne-үshіn-keldіm.html" class="article-more__item">
@@ -310,7 +279,7 @@ color: #FFFFFF;
 										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84029257_650884998982587_8857777222872158278_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=ZBM5XypeMIkAX8e_iWC&oh=f75f8e427003299605547feee650e17a&oe=5EC0066A" alt="🧐Мен өмірге не үшін келдім?">
 									</div>
 									<div class="article-more__item-name" style="
-		color: #FFFFFF;
+		color: #243154;
 ">🧐Мен өмірге не үшін келдім?</div>
 								</a>
 							</div>
@@ -323,6 +292,7 @@ color: #FFFFFF;
 				<div class="container">
 					<div class="links-page-soc">
 						<a href="https://www.instagram.com/sayatahmethan_" target="_blank" style="
+color: #243154
 "
 							class="links-page-soc__link" title="Instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a>
 					</div>
