--- a/error.html
+++ b/error.html
@@ -67,6 +67,11 @@
 						<div class="banner__main-title">Свяжитесь с нами</div>
 						<div class="links-page-bar__banner">
 							<div class="banner__main-row">
+								<a href="https://wa.me/+77719656566" target="_blank" 
+								class="banner__main-item">
+									<div class="banner__main-item-ring"><i class="fa fa-whatsapp" aria-hidden="true"></i></div>
+									<div class="banner__main-item-txt">WhatsApp</div>
+								</a>
 								<a href="https://www.instagram.com/sayatahmethan_" target="_blank" 
 								class="banner__main-item">
 									<div class="banner__main-item-ring"><i class="fa fa-instagram" aria-hidden="true"></i></div>
