--- a/links.html
+++ b/links.html
@@ -195,7 +195,15 @@
 				<div class="container">
 					<h1 class="links-page-title"></h1>
 
-					<div class="links-page-messagers count-1">
+					<div class="links-page-messagers count-3">
+						<a href="https://wa.me/+77719656566" target="_blank" style="
+background: #243154;
+color: #C6BB73;
+"
+							class="links-page-messager">
+							<i class="fa fa-whatsapp" aria-hidden="true">
+								</i>WhatsApp
+						</a>
 						<a href="https://www.instagram.com/sayatahmethan_" target="_blank" style="
 background: #243154;
 color: #C6BB73;
@@ -203,6 +211,14 @@ color: #C6BB73;
 							class="links-page-messager">
 							<i class="fa fa-instagram" aria-hidden="true">
 								</i>Instagram
+						</a>
+						<a href="tel:+77719656566" target="_blank" style="
+background: #243154;
+color: #C6BB73;
+"
+							class="links-page-messager">
+							<i class="fa fa-phone" aria-hidden="true">
+								</i>Phone
 						</a>
 					</div>
 
