--- a/error.html
+++ b/error.html
@@ -43,7 +43,7 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<a href="./main.html" class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/76875187_439920826914475_1495386447144812544_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=2aVk_ULY04cAX_6BXuy&oh=091e0343bad630f88b54937f54e3646e&oe=5ED77ACC" alt="😁 Арманшыл Саят"></div>
+							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/76875187_439920826914475_1495386447144812544_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=SVg3Zlb8h44AX_E63JL&oh=dcd0ded1b19284796871e2b90f13f813&oe=5ED77ACC" alt="😁 Арманшыл Саят"></div>
 							<div class="header__logo-txt">sayatahmethan_</div>
 						</a>
 						<div class="header__title">😁 Арманшыл Саят</div>
@@ -86,12 +86,39 @@
 				<div class="container">
 					<h2 class="article-more__title">ПОПУЛЯРНЫЕ</h2>
 					<div class="article-more__list">
+							<a href="./posts/./x-үy-satudaғy-3x3-құpiyasy.html" class="article-more__item">
+							<div class="article-more__item-pic">
+								<div class="article-more__item-pic-blind">
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>172</span>
+								</div>
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/75148256_157308765365063_6723412256602712267_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=Z0FP-SqHrpQAX-ksZbw&oh=8f4739ee25a5fbd544c228b3c4bbf605&oe=5ED40CEA" alt="✊ Үй сатудағы 3/3 құпиясы">
+							</div>
+							<div class="article-more__item-name">✊ Үй сатудағы 3/3 құпиясы</div>
+						</a>
+							<a href="./posts/./zhaңalyқtyң-kөkesіx-tөmengі.html" class="article-more__item">
+							<div class="article-more__item-pic">
+								<div class="article-more__item-pic-blind">
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>167</span>
+								</div>
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/75586246_166073588054248_6776733106266702904_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=1XECaCmNmBYAX9GaUyW&oh=a646c47a98e37ee0107edd76ea1a90d6&oe=5ED0C768" alt="Жаңалықтың көкесі, төменгі">
+							</div>
+							<div class="article-more__item-name">Жаңалықтың көкесі, төменгі</div>
+						</a>
+							<a href="./posts/./xxүy-satudyң-3x2-құpiyasy.html" class="article-more__item">
+							<div class="article-more__item-pic">
+								<div class="article-more__item-pic-blind">
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>153</span>
+								</div>
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/71851985_408537836745398_1783606332378097787_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=T-fSIJFwWM4AX95M3-k&oh=920dc2008a662b75b00e512f8d48b112&oe=5EDA9D2E" alt="☝️Үй сатудың 3/2 құпиясы">
+							</div>
+							<div class="article-more__item-name">☝️Үй сатудың 3/2 құпиясы</div>
+						</a>
 							<a href="./posts/./xx-x2020x-zhyly-zhetken-zhetіstіkterіm.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>151</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/78813973_817282122053881_3899741372767422860_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=IpQY7Sg6_vYAX9BetZi&oh=3a50485d029549d6d698bcdc2ff68c1d&oe=5EBB3AF6" alt="😊 «2020» жылы жеткен жетістіктерім">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/78813973_817282122053881_3899741372767422860_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=VnxHBZJHzzgAX-efvui&oh=cd725bc107aa69c9ae2d1e2fbc7c14cb&oe=5EBB3AF6" alt="😊 «2020» жылы жеткен жетістіктерім">
 							</div>
 							<div class="article-more__item-name">😊 «2020» жылы жеткен жетістіктерім</div>
 						</a>
@@ -100,45 +127,36 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>151</span>
 								</div>
-								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/75284446_193327011825233_3477503653942516291_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=EjgC7hto3h8AX_cXoR5&oh=f66ec32fb10d5e7274454082a2c3625e&oe=5ED9AAD7" alt="АРМАН-> МАҚСАТ-> ІС- ӘРЕКЕТ->">
+								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/75284446_193327011825233_3477503653942516291_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=EjgC7hto3h8AX-bCl-b&oh=7e9a49fb44460586108949ccbc7e9943&oe=5ED9AAD7" alt="АРМАН-> МАҚСАТ-> ІС- ӘРЕКЕТ->">
 							</div>
 							<div class="article-more__item-name">АРМАН-> МАҚСАТ-> ІС- ӘРЕКЕТ-></div>
+						</a>
+							<a href="./posts/./xx-post-saluғa-uaқyt-zhoқ.html" class="article-more__item">
+							<div class="article-more__item-pic">
+								<div class="article-more__item-pic-blind">
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>146</span>
+								</div>
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/77401446_778145799273103_7373557858853546984_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=5Rfqt1IFd0cAX_AtlNy&oh=558d9b99392a3e78a4fcd3a0eefd57eb&oe=5ED1BA3C" alt="⚠️ Пост салуға уақыт жоқ!">
+							</div>
+							<div class="article-more__item-name">⚠️ Пост салуға уақыт жоқ!</div>
+						</a>
+							<a href="./posts/./xx-30-kүnde-үy-satudyң-3x1-құpiyasy.html" class="article-more__item">
+							<div class="article-more__item-pic">
+								<div class="article-more__item-pic-blind">
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>145</span>
+								</div>
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/74385177_1591143844359853_3822974184782837967_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=EixKxTQU4msAX9j7682&oh=13f55152d47d1a80aa7914aa543feb68&oe=5ECD9C27" alt="😘 30 күнде үй сатудың 3/1 құпиясы">
+							</div>
+							<div class="article-more__item-name">😘 30 күнде үй сатудың 3/1 құпиясы</div>
 						</a>
 							<a href="./posts/./xx-қayyrly-kүn-қalayyқx-mұnda.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>132</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82234340_108761900658007_8952337626418518331_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=axEDHObr5OoAX8FOQfC&oh=ae5922409974367fc2662e03a6266bfb&oe=5EC50B1F" alt="👋 Қайырлы күн Қалайық, Мұнда">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82234340_108761900658007_8952337626418518331_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=axEDHObr5OoAX-cYORJ&oh=1b0740cb73354feb575655fb63e4c92f&oe=5EC50B1F" alt="👋 Қайырлы күн Қалайық, Мұнда">
 							</div>
 							<div class="article-more__item-name">👋 Қайырлы күн Қалайық, Мұнда</div>
-						</a>
-							<a href="./posts/./xxmen-өmіrge-ne-үshіn-keldіm.html" class="article-more__item">
-							<div class="article-more__item-pic">
-								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>93</span>
-								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84029257_650884998982587_8857777222872158278_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=ZBM5XypeMIkAX8e_iWC&oh=f75f8e427003299605547feee650e17a&oe=5EC0066A" alt="🧐Мен өмірге не үшін келдім?">
-							</div>
-							<div class="article-more__item-name">🧐Мен өмірге не үшін келдім?</div>
-						</a>
-							<a href="./posts/./al-mіne-tegіn-үyren-de-basta.html" class="article-more__item">
-							<div class="article-more__item-pic">
-								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>47</span>
-								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/73387385_2628140830557121_864822904081207135_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=QqkwU_L4jpAAX-o-dlz&oh=a2f500f3c7ed2df17e8392d47e3b1a9b&oe=5E2DE0D2" alt="Ал міне тегін үйрен де Баста!">
-							</div>
-							<div class="article-more__item-name">Ал міне тегін үйрен де Баста!</div>
-						</a>
-							<a href="./posts/./kәsіptі-neden-bastaymyn.html" class="article-more__item">
-							<div class="article-more__item-pic">
-								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>32</span>
-								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82291063_175619160511614_6559901807181624103_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=2sqUlO1e1DEAX_gvXA6&oh=4792ee85fec7f6fe69418d343f0da46a&oe=5EC64D97" alt="КӘСІПТІ НЕДЕН БАСТАЙМЫН?">
-							</div>
-							<div class="article-more__item-name">КӘСІПТІ НЕДЕН БАСТАЙМЫН?</div>
 						</a>
 						</div>
 				</div>
