--- a/stories.html
+++ b/stories.html
@@ -2,7 +2,7 @@
 <html lang="ru" prefix="og: http://ogp.me/ns#">
 <head>
     <meta charset="UTF-8">
-    <title>Stories. </title>
+    <title>Stories. 😁 Арманшыл Саят</title>
     
     <meta http-equiv="x-ua-compatible" content="ie=edge,chrome=1"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
@@ -35,8 +35,10 @@
     <meta property="og:image:type" content="image/jpeg" />
     <meta property="og:image:width" content="150"/>
     <meta property="og:image:height" content="150"/>
-    <meta property="og:title" content="" />
-    <meta property="og:description" content="" />
+    <meta property="og:title" content="😁 Арманшыл Саят" />
+    <meta property="og:description" content="😘 Мен Арманыма жетемін.
+😁 Себебі:Жету формуласын білемін!
+👇 Ал сізге қызық болса,төмендегі ойтолғамдарымды оқыңыз!" />
     <meta property="og:locale" content="Ru-ru" />
     <meta property="og:site_name" content="sayatahmethan_" />
 
@@ -58,10 +60,10 @@
 				<div class="header__wrap">
 					<div class="header__left">
 						<div class="header__logo">
-							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/76875187_439920826914475_1495386447144812544_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=2aVk_ULY04cAX_6BXuy&oh=091e0343bad630f88b54937f54e3646e&oe=5ED77ACC" alt="😁 Арманшыл Саят" /></div>
+							<div class="header__logo-pic"><img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-19/s150x150/76875187_439920826914475_1495386447144812544_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_ohc=SVg3Zlb8h44AX_E63JL&oh=dcd0ded1b19284796871e2b90f13f813&oe=5ED77ACC" alt="😁 Арманшыл Саят" /></div>
 							<div class="header__logo-txt">sayatahmethan_</div>
 						</div>
-						<div class="header__title"></div>
+						<div class="header__title">😁 Арманшыл Саят</div>
 					</div>
 				</div>
 			</div>
@@ -103,9 +105,19 @@
 				<div class="items-main" id="js-items-main">
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
+							<input id="xx-zharnama-zhіbermey-xx-tap" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82344041_472286830346589_2121484091507824806_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=gnkAR_O135MAX-49ro_&oh=aec5cb76a267725bdd00e6f8a26aab1b&oe=5EC29881" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🤑 Жарнама жібермей 🍋 тап!">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
 							<input id="kәsіptі-neden-bastaymyn" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82291063_175619160511614_6559901807181624103_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=2sqUlO1e1DEAX_gvXA6&oh=4792ee85fec7f6fe69418d343f0da46a&oe=5EC64D97" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="КӘСІПТІ НЕДЕН БАСТАЙМЫН?">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82291063_175619160511614_6559901807181624103_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=FfC6r9KNNBwAX9-JwZD&oh=83312d73bf5db4ea13f4400f0f32f1a1&oe=5EC64D97" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="КӘСІПТІ НЕДЕН БАСТАЙМЫН?">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -115,7 +127,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xxmen-өmіrge-ne-үshіn-keldіm" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84029257_650884998982587_8857777222872158278_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=ZBM5XypeMIkAX8e_iWC&oh=f75f8e427003299605547feee650e17a&oe=5EC0066A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🧐Мен өмірге не үшін келдім?">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84029257_650884998982587_8857777222872158278_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=ZBM5XypeMIkAX8DorzQ&oh=ab097040efd7ef22affe77d4ecac35f4&oe=5EC0066A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🧐Мен өмірге не үшін келдім?">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -125,7 +137,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xx-қayyrly-kүn-қalayyқx-mұnda" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82234340_108761900658007_8952337626418518331_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=axEDHObr5OoAX8FOQfC&oh=ae5922409974367fc2662e03a6266bfb&oe=5EC50B1F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="👋 Қайырлы күн Қалайық, Мұнда">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82234340_108761900658007_8952337626418518331_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=axEDHObr5OoAX-cYORJ&oh=1b0740cb73354feb575655fb63e4c92f&oe=5EC50B1F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="👋 Қайырлы күн Қалайық, Мұнда">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -135,7 +147,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xx-x2020x-zhyly-zhetken-zhetіstіkterіm" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/78813973_817282122053881_3899741372767422860_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=IpQY7Sg6_vYAX9BetZi&oh=3a50485d029549d6d698bcdc2ff68c1d&oe=5EBB3AF6" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="😊 «2020» жылы жеткен жетістіктерім">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/78813973_817282122053881_3899741372767422860_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=VnxHBZJHzzgAX-efvui&oh=cd725bc107aa69c9ae2d1e2fbc7c14cb&oe=5EBB3AF6" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="😊 «2020» жылы жеткен жетістіктерім">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -145,7 +157,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="al-mіne-tegіn-үyren-de-basta" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/73387385_2628140830557121_864822904081207135_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=QqkwU_L4jpAAX-o-dlz&oh=a2f500f3c7ed2df17e8392d47e3b1a9b&oe=5E2DE0D2" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Ал міне тегін үйрен де Баста!">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/73387385_2628140830557121_864822904081207135_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=0SYVUljoscUAX_SE2BX&oh=83f5b46fdfff9c17ac7020815a19873a&oe=5E2FDB12" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Ал міне тегін үйрен де Баста!">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -155,7 +167,117 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="arman---maқsat---іs--әreket--" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/75284446_193327011825233_3477503653942516291_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=EjgC7hto3h8AX_cXoR5&oh=f66ec32fb10d5e7274454082a2c3625e&oe=5ED9AAD7" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="АРМАН-> МАҚСАТ-> ІС- ӘРЕКЕТ->">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/75284446_193327011825233_3477503653942516291_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=EjgC7hto3h8AX-bCl-b&oh=7e9a49fb44460586108949ccbc7e9943&oe=5ED9AAD7" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="АРМАН-> МАҚСАТ-> ІС- ӘРЕКЕТ->">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
+							<input id="xx-post-saluғa-uaқyt-zhoқ" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/77401446_778145799273103_7373557858853546984_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=5Rfqt1IFd0cAX_AtlNy&oh=558d9b99392a3e78a4fcd3a0eefd57eb&oe=5ED1BA3C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="⚠️ Пост салуға уақыт жоқ!">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
+							<input id="zhaңalyқtyң-kөkesіx-tөmengі" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/75586246_166073588054248_6776733106266702904_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=1XECaCmNmBYAX9GaUyW&oh=a646c47a98e37ee0107edd76ea1a90d6&oe=5ED0C768" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Жаңалықтың көкесі, төменгі">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
+							<input id="x-үy-satudaғy-3x3-құpiyasy" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/75148256_157308765365063_6723412256602712267_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=Z0FP-SqHrpQAX-ksZbw&oh=8f4739ee25a5fbd544c228b3c4bbf605&oe=5ED40CEA" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="✊ Үй сатудағы 3/3 құпиясы">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
+							<input id="xxүy-satudyң-3x2-құpiyasy" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/71851985_408537836745398_1783606332378097787_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=T-fSIJFwWM4AX95M3-k&oh=920dc2008a662b75b00e512f8d48b112&oe=5EDA9D2E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="☝️Үй сатудың 3/2 құпиясы">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
+							<input id="xx-30-kүnde-үy-satudyң-3x1-құpiyasy" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/74385177_1591143844359853_3822974184782837967_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=EixKxTQU4msAX9j7682&oh=13f55152d47d1a80aa7914aa543feb68&oe=5ECD9C27" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="😘 30 күнде үй сатудың 3/1 құпиясы">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
+							<input id="xx-biznesmenge-kerektі-bіlіm" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/71187969_442627039709879_197456136209767097_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=PSIJuzjFUZoAX-BseQ4&oh=24d2854b06a85207aeabf96339ac4e80&oe=5EB5CB2D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="📚 Бизнесменге керекті білім">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
+							<input id="xx-biznesmenge-kerektі-bіlіm-1" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/70757859_107756260519312_5554991696883075902_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=VfYsOqTEW2QAX-AgU37&oh=f3390e342b4586e1c7c4cc4617cf7c2c&oe=5ED57C3C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="📚 Бизнесменге керекті білім">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
+							<input id="xxxxx-men-өz-өmіrіmnің-egesіmіn" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/72610312_159173698509403_8484063782006537168_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=-LmZtTlldBIAX_8O4UY&oh=c6ad92ce529a1efabdbbca17cecdebc4&oe=5ED86FAC" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🦸‍♂️ Мен өз өмірімнің егесімін">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
+							<input id="xx-men-18-toldymx-allaғa-shүkіr" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/69959252_388029788512356_2966149528030807823_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=0XtQDcUjaZ0AX98Ap1l&oh=98c03755992e42a190879c9ba167d681&oe=5ED365E4" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="😃 Мен 18 толдым, Аллаға шүкір">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
+							<input id="bұl-menің-17-zhasymdaғy-eң-soңғy" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/70520693_160429371700250_8939151866088050391_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=7KBfWOBcq6AAX_P6RnT&oh=36423e477d8c095e0f08cb8c58852755&oe=5ED2464D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Бұл менің 17 жасымдағы ең соңғы">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
+							<input id="xx-menің-makhabbatym" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/71096410_2424735274480954_3664506271447986917_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=8W_3ij4BJsMAX-MwPTb&oh=c20ef22f247224bc5e64afa4db415af2&oe=5E2FB9DD" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="😍 Менің махаббатым.">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
