--- a/links.html
+++ b/links.html
@@ -193,6 +193,15 @@
 								</div>
 							</div>
 							<div class="swiper-slide">
+								<div class="stories__slide" title="ктlike">
+									<a href="./tags/./ktlike.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/ktlike.png);"></div>
+										<div class="stories__slide-txt" style="		color: #243154;
+">ктlike</div>
+									</a>
+								</div>
+							</div>
+							<div class="swiper-slide">
 								<div class="stories__slide" title="ktклуб">
 									<a href="./tags/./ktklub.html">
 										<div class="stories__slide-pic" style="background-image: url(./img/og/ktklub.png);"></div>
@@ -216,51 +225,6 @@
 										<div class="stories__slide-pic" style="background-image: url(./img/og/vtomnsvv.png);"></div>
 										<div class="stories__slide-txt" style="		color: #243154;
 ">втоmnсvv</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="аламан">
-									<a href="./tags/./alaman.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/alaman.png);"></div>
-										<div class="stories__slide-txt" style="		color: #243154;
-">аламан</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="алматы">
-									<a href="./tags/./almaty.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/almaty.png);"></div>
-										<div class="stories__slide-txt" style="		color: #243154;
-">алматы</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="kt лайк">
-									<a href="./tags/./kt-layk.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/kt-layk.png);"></div>
-										<div class="stories__slide-txt" style="		color: #243154;
-">kt лайк</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="мастер класс">
-									<a href="./tags/./master-klass.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/master-klass.png);"></div>
-										<div class="stories__slide-txt" style="		color: #243154;
-">мастер класс</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="бизнес бастау">
-									<a href="./tags/./biznes-bastau.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/biznes-bastau.png);"></div>
-										<div class="stories__slide-txt" style="		color: #243154;
-">бизнес бастау</div>
 									</a>
 								</div>
 							</div>
@@ -430,7 +394,7 @@ color: #C6BB73;
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>172</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/75148256_157308765365063_6723412256602712267_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=Z0FP-SqHrpQAX-ksZbw&oh=8f4739ee25a5fbd544c228b3c4bbf605&oe=5ED40CEA" alt="✊ Үй сатудағы 3/3 құпиясы">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/75148256_157308765365063_6723412256602712267_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=gErJ9Na1YOUAX9QhSYR&oh=f606e85c6eff6f653c2a2a9d0c64bb2e&oe=5ED40CEA" alt="✊ Үй сатудағы 3/3 құпиясы">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #243154;
@@ -461,7 +425,7 @@ color: #C6BB73;
 								<a href="./xx-x2020x-zhyly-zhetken-zhetіstіkterіm.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>151</span>
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>152</span>
 										</div>
 										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/78813973_817282122053881_3899741372767422860_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=VnxHBZJHzzgAX-efvui&oh=cd725bc107aa69c9ae2d1e2fbc7c14cb&oe=5EBB3AF6" alt="😊 «2020» жылы жеткен жетістіктерім">
 									</div>
@@ -525,7 +489,7 @@ color: #C6BB73;
 						<a href="https://www.instagram.com/sayatahmethan_" target="_blank" style="
 color: #243154
 "
-							class="links-page-soc__link" title="Instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a>
+ class="links-page-soc__link" title="Instagram"><i class="fa fa-instagram" aria-hidden="true"></i></a>
 					</div>
 
 					<div class="links-page-footer">
