--- a/stories.html
+++ b/stories.html
@@ -107,7 +107,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xx-zharnama-zhіbermey-xx-tap" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82344041_472286830346589_2121484091507824806_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=gnkAR_O135MAX-49ro_&oh=aec5cb76a267725bdd00e6f8a26aab1b&oe=5EC29881" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🤑 Жарнама жібермей 🍋 тап!">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/82697574_2488574724803465_3332618556511582612_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=zlGqNFYyi-AAX-lO5xq&oh=9e8834f8681cfb66786aa9a7ce55438b&oe=5ED5DB71" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="💰 Жарнама жібермей 🍋 тап!">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -115,9 +115,9 @@
 					</div>
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
-							<input id="kәsіptі-neden-bastaymyn" type="checkbox" />
+							<input id="xx-zharnama-zhіbermey-xx-tap-1" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82291063_175619160511614_6559901807181624103_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=106&_nc_ohc=FfC6r9KNNBwAX9-JwZD&oh=83312d73bf5db4ea13f4400f0f32f1a1&oe=5EC64D97" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="КӘСІПТІ НЕДЕН БАСТАЙМЫН?">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82344041_472286830346589_2121484091507824806_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=mT6lT4U2q18AX_xSpHM&oh=5e63a1a9f24c6ce49e4318a1ab7ac3d1&oe=5EC29881" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🤑 Жарнама жібермей 🍋 тап!">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -157,7 +157,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="al-mіne-tegіn-үyren-de-basta" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/73387385_2628140830557121_864822904081207135_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=0SYVUljoscUAX_SE2BX&oh=83f5b46fdfff9c17ac7020815a19873a&oe=5E2FDB12" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Ал міне тегін үйрен де Баста!">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/73387385_2628140830557121_864822904081207135_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=0SYVUljoscUAX_SE2BX&oh=cf935d2f8a4c0af67b94e883101bbe22&oe=5E3083D2" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Ал міне тегін үйрен де Баста!">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -197,7 +197,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="x-үy-satudaғy-3x3-құpiyasy" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/75148256_157308765365063_6723412256602712267_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=Z0FP-SqHrpQAX-ksZbw&oh=8f4739ee25a5fbd544c228b3c4bbf605&oe=5ED40CEA" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="✊ Үй сатудағы 3/3 құпиясы">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/75148256_157308765365063_6723412256602712267_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=gErJ9Na1YOUAX9QhSYR&oh=f606e85c6eff6f653c2a2a9d0c64bb2e&oe=5ED40CEA" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="✊ Үй сатудағы 3/3 құпиясы">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -277,7 +277,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xx-menің-makhabbatym" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/71096410_2424735274480954_3664506271447986917_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=8W_3ij4BJsMAX-MwPTb&oh=c20ef22f247224bc5e64afa4db415af2&oe=5E2FB9DD" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="😍 Менің махаббатым.">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/71096410_2424735274480954_3664506271447986917_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=1N-u4rrFFUEAX813CYm&oh=bb38760fff73a5456145dbaf42fd248b&oe=5E30629D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="😍 Менің махаббатым.">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
