--- a/links.html
+++ b/links.html
@@ -9,8 +9,8 @@
     <script async src="https://use.fontawesome.com/d758daec41.js"></script>   
 	<link rel="stylesheet" href="css/style.css"/>
     
-    <meta name="description" content="бб команда құпия үйсату суперсаят пост лайк баста крыша білім">
-    <meta name="keywords" content="бб команда құпия үйсату суперсаят пост лайк баста крыша білім" />
+    <meta name="description" content="құпия үйсату бб команда суперсаят баста крыша білім ктlike бизnes ktклуб">
+    <meta name="keywords" content="құпия үйсату бб команда суперсаят баста крыша білім ктlike бизnes ktклуб" />
     
     <link rel="apple-touch-icon" sizes="57x57" href="img/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="img/favicon/apple-icon-60x60.png">
@@ -39,7 +39,7 @@
     <meta property="og:image:width" content="150"/>
     <meta property="og:image:height" content="150"/>
     <meta property="og:title" content="😁 Арманшыл Саят" />
-    <meta property="og:description" content="бб команда құпия үйсату суперсаят пост лайк баста крыша білім" />
+    <meta property="og:description" content="құпия үйсату бб команда суперсаят баста крыша білім ктlike бизnes ktклуб" />
     <meta property="og:locale" content="Ru-ru" />
     <meta property="og:site_name" content="sayatahmethan_" />
 
@@ -85,15 +85,6 @@
 					<div class="stories__slider" id="js-stories-slider">
 						<div class="swiper-wrapper">
 							<div class="swiper-slide">
-								<div class="stories__slide" title="бб команда">
-									<a href="./tags/./bb-komanda.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/bb-komanda.png);"></div>
-										<div class="stories__slide-txt" style="		color: #243154;
-">бб команда</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
 								<div class="stories__slide" title="құпия">
 									<a href="./tags/./құpiya.html">
 										<div class="stories__slide-pic" style="background-image: url(./img/og/құpiya.png);"></div>
@@ -112,20 +103,20 @@
 								</div>
 							</div>
 							<div class="swiper-slide">
+								<div class="stories__slide" title="бб команда">
+									<a href="./tags/./bb-komanda.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/bb-komanda.png);"></div>
+										<div class="stories__slide-txt" style="		color: #243154;
+">бб команда</div>
+									</a>
+								</div>
+							</div>
+							<div class="swiper-slide">
 								<div class="stories__slide" title="суперсаят">
 									<a href="./tags/./supersayat.html">
 										<div class="stories__slide-pic" style="background-image: url(./img/og/supersayat.png);"></div>
 										<div class="stories__slide-txt" style="		color: #243154;
 ">суперсаят</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="команда">
-									<a href="./tags/./komanda.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/komanda.png);"></div>
-										<div class="stories__slide-txt" style="		color: #243154;
-">команда</div>
 									</a>
 								</div>
 							</div>
@@ -157,20 +148,29 @@
 								</div>
 							</div>
 							<div class="swiper-slide">
+								<div class="stories__slide" title="ктlike">
+									<a href="./tags/./ktlike.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/ktlike.png);"></div>
+										<div class="stories__slide-txt" style="		color: #243154;
+">ктlike</div>
+									</a>
+								</div>
+							</div>
+							<div class="swiper-slide">
+								<div class="stories__slide" title="бизnes">
+									<a href="./tags/./biznes.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/biznes.png);"></div>
+										<div class="stories__slide-txt" style="		color: #243154;
+">бизnes</div>
+									</a>
+								</div>
+							</div>
+							<div class="swiper-slide">
 								<div class="stories__slide" title="тaмaшa">
 									<a href="./tags/./tamasha.html">
 										<div class="stories__slide-pic" style="background-image: url(./img/og/tamasha.png);"></div>
 										<div class="stories__slide-txt" style="		color: #243154;
 ">тaмaшa</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="крыша">
-									<a href="./tags/./krysha.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/krysha.png);"></div>
-										<div class="stories__slide-txt" style="		color: #243154;
-">крыша</div>
 									</a>
 								</div>
 							</div>
@@ -193,20 +193,29 @@
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="ктlike">
-									<a href="./tags/./ktlike.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/ktlike.png);"></div>
-										<div class="stories__slide-txt" style="		color: #243154;
-">ктlike</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
 								<div class="stories__slide" title="ktклуб">
 									<a href="./tags/./ktklub.html">
 										<div class="stories__slide-pic" style="background-image: url(./img/og/ktklub.png);"></div>
 										<div class="stories__slide-txt" style="		color: #243154;
 ">ktклуб</div>
+									</a>
+								</div>
+							</div>
+							<div class="swiper-slide">
+								<div class="stories__slide" title="комenttime">
+									<a href="./tags/./komenttime.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/komenttime.png);"></div>
+										<div class="stories__slide-txt" style="		color: #243154;
+">комenttime</div>
+									</a>
+								</div>
+							</div>
+							<div class="swiper-slide">
+								<div class="stories__slide" title="кунтамаша2701">
+									<a href="./tags/./kuntamasha2701.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/kuntamasha2701.png);"></div>
+										<div class="stories__slide-txt" style="		color: #243154;
+">кунтамаша2701</div>
 									</a>
 								</div>
 							</div>
@@ -229,20 +238,11 @@
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="пост">
-									<a href="./tags/./post.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/post.png);"></div>
+								<div class="stories__slide" title="крыша">
+									<a href="./tags/./krysha.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/krysha.png);"></div>
 										<div class="stories__slide-txt" style="		color: #243154;
-">пост</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="лайк">
-									<a href="./tags/./layk.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/layk.png);"></div>
-										<div class="stories__slide-txt" style="		color: #243154;
-">лайк</div>
+">крыша</div>
 									</a>
 								</div>
 							</div>
@@ -256,20 +256,11 @@
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="бизнес">
-									<a href="./tags/./biznes.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/biznes.png);"></div>
+								<div class="stories__slide" title="команда">
+									<a href="./tags/./komanda.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/komanda.png);"></div>
 										<div class="stories__slide-txt" style="		color: #243154;
-">бизнес</div>
-									</a>
-								</div>
-							</div>
-							<div class="swiper-slide">
-								<div class="stories__slide" title="достар">
-									<a href="./tags/./dostar.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/dostar.png);"></div>
-										<div class="stories__slide-txt" style="		color: #243154;
-">достар</div>
+">команда</div>
 									</a>
 								</div>
 							</div>
@@ -310,11 +301,11 @@
 								</div>
 							</div>
 							<div class="swiper-slide">
-								<div class="stories__slide" title="бизнес менгекеректі білім">
-									<a href="./tags/./biznes-mengekerektі-bіlіm.html">
-										<div class="stories__slide-pic" style="background-image: url(./img/og/biznes-mengekerektі-bіlіm.png);"></div>
+								<div class="stories__slide" title="бизнесменгекеректі білім">
+									<a href="./tags/./biznesmengekerektі-bіlіm.html">
+										<div class="stories__slide-pic" style="background-image: url(./img/og/biznesmengekerektі-bіlіm.png);"></div>
 										<div class="stories__slide-txt" style="		color: #243154;
-">бизнес менгекеректі білім</div>
+">бизнесменгекеректі білім</div>
 									</a>
 								</div>
 							</div>
@@ -405,7 +396,7 @@ color: #C6BB73;
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>167</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/75586246_166073588054248_6776733106266702904_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=1XECaCmNmBYAX9GaUyW&oh=a646c47a98e37ee0107edd76ea1a90d6&oe=5ED0C768" alt="Жаңалықтың көкесі, төменгі">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/75586246_166073588054248_6776733106266702904_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=DgDooWxWF_gAX9UzLMI&oh=31fdb1d405dc487f8ae6dda61adfe0d3&oe=5ED0C768" alt="Жаңалықтың көкесі, төменгі">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #243154;
@@ -438,40 +429,40 @@ color: #C6BB73;
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>151</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/75284446_193327011825233_3477503653942516291_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=EjgC7hto3h8AX-bCl-b&oh=7e9a49fb44460586108949ccbc7e9943&oe=5ED9AAD7" alt="АРМАН-> МАҚСАТ-> ІС- ӘРЕКЕТ->">
+										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/75284446_193327011825233_3477503653942516291_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=5oJaYcqFUQYAX9BqVx9&oh=2469faa3c15cb84b58d5286b12ad4f50&oe=5ED9AAD7" alt="АРМАН-> МАҚСАТ-> ІС- ӘРЕКЕТ->">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #243154;
 ">АРМАН-> МАҚСАТ-> ІС- ӘРЕКЕТ-></div>
+								</a>
+								<a href="./xx-zharnama-zhіbermey-xx-tap-1.html" class="article-more__item">
+									<div class="article-more__item-pic">
+										<div class="article-more__item-pic-blind">
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>150</span>
+										</div>
+										<img class="js-now-lazy" src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/82697574_2488574724803465_3332618556511582612_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=zlGqNFYyi-AAX-lO5xq&oh=9e8834f8681cfb66786aa9a7ce55438b&oe=5ED5DB71" alt="💰 Жарнама жібермей 🍋 тап!">
+									</div>
+									<div class="article-more__item-name" style="
+		color: #243154;
+">💰 Жарнама жібермей 🍋 тап!</div>
 								</a>
 								<a href="./xx-post-saluғa-uaқyt-zhoқ.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>146</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/77401446_778145799273103_7373557858853546984_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=5Rfqt1IFd0cAX_AtlNy&oh=558d9b99392a3e78a4fcd3a0eefd57eb&oe=5ED1BA3C" alt="⚠️ Пост салуға уақыт жоқ!">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/77401446_778145799273103_7373557858853546984_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=QHQfSarSep8AX9euhu0&oh=9de537d283f1dc3ba942bdb3b3fc952f&oe=5ED1BA3C" alt="⚠️ Пост салуға уақыт жоқ!">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #243154;
 ">⚠️ Пост салуға уақыт жоқ!</div>
-								</a>
-								<a href="./xx-30-kүnde-үy-satudyң-3x1-құpiyasy.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>145</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/74385177_1591143844359853_3822974184782837967_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=EixKxTQU4msAX9j7682&oh=13f55152d47d1a80aa7914aa543feb68&oe=5ECD9C27" alt="😘 30 күнде үй сатудың 3/1 құпиясы">
-									</div>
-									<div class="article-more__item-name" style="
-		color: #243154;
-">😘 30 күнде үй сатудың 3/1 құпиясы</div>
 								</a>
 								<a href="./xx-қayyrly-kүn-қalayyқx-mұnda.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>132</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82234340_108761900658007_8952337626418518331_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=axEDHObr5OoAX-cYORJ&oh=1b0740cb73354feb575655fb63e4c92f&oe=5EC50B1F" alt="👋 Қайырлы күн Қалайық, Мұнда">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82234340_108761900658007_8952337626418518331_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=pex7Ovivl5YAX_cXdx7&oh=be42bcac47111fba1ab311707d125416&oe=5EC50B1F" alt="👋 Қайырлы күн Қалайық, Мұнда">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #243154;
