--- a/error.html
+++ b/error.html
@@ -101,7 +101,7 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>167</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/75586246_166073588054248_6776733106266702904_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=1XECaCmNmBYAX9GaUyW&oh=a646c47a98e37ee0107edd76ea1a90d6&oe=5ED0C768" alt="Жаңалықтың көкесі, төменгі">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/75586246_166073588054248_6776733106266702904_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=DgDooWxWF_gAX9UzLMI&oh=31fdb1d405dc487f8ae6dda61adfe0d3&oe=5ED0C768" alt="Жаңалықтың көкесі, төменгі">
 							</div>
 							<div class="article-more__item-name">Жаңалықтың көкесі, төменгі</div>
 						</a>
@@ -128,34 +128,34 @@
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>151</span>
 								</div>
-								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/75284446_193327011825233_3477503653942516291_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=EjgC7hto3h8AX-bCl-b&oh=7e9a49fb44460586108949ccbc7e9943&oe=5ED9AAD7" alt="АРМАН-> МАҚСАТ-> ІС- ӘРЕКЕТ->">
+								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/75284446_193327011825233_3477503653942516291_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=5oJaYcqFUQYAX9BqVx9&oh=2469faa3c15cb84b58d5286b12ad4f50&oe=5ED9AAD7" alt="АРМАН-> МАҚСАТ-> ІС- ӘРЕКЕТ->">
 							</div>
 							<div class="article-more__item-name">АРМАН-> МАҚСАТ-> ІС- ӘРЕКЕТ-></div>
+						</a>
+							<a href="./posts/./xx-zharnama-zhіbermey-xx-tap-1.html" class="article-more__item">
+							<div class="article-more__item-pic">
+								<div class="article-more__item-pic-blind">
+									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>150</span>
+								</div>
+								<img src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/82697574_2488574724803465_3332618556511582612_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=zlGqNFYyi-AAX-lO5xq&oh=9e8834f8681cfb66786aa9a7ce55438b&oe=5ED5DB71" alt="💰 Жарнама жібермей 🍋 тап!">
+							</div>
+							<div class="article-more__item-name">💰 Жарнама жібермей 🍋 тап!</div>
 						</a>
 							<a href="./posts/./xx-post-saluғa-uaқyt-zhoқ.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>146</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/77401446_778145799273103_7373557858853546984_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=5Rfqt1IFd0cAX_AtlNy&oh=558d9b99392a3e78a4fcd3a0eefd57eb&oe=5ED1BA3C" alt="⚠️ Пост салуға уақыт жоқ!">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/77401446_778145799273103_7373557858853546984_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=QHQfSarSep8AX9euhu0&oh=9de537d283f1dc3ba942bdb3b3fc952f&oe=5ED1BA3C" alt="⚠️ Пост салуға уақыт жоқ!">
 							</div>
 							<div class="article-more__item-name">⚠️ Пост салуға уақыт жоқ!</div>
-						</a>
-							<a href="./posts/./xx-30-kүnde-үy-satudyң-3x1-құpiyasy.html" class="article-more__item">
-							<div class="article-more__item-pic">
-								<div class="article-more__item-pic-blind">
-									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>145</span>
-								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/74385177_1591143844359853_3822974184782837967_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=EixKxTQU4msAX9j7682&oh=13f55152d47d1a80aa7914aa543feb68&oe=5ECD9C27" alt="😘 30 күнде үй сатудың 3/1 құпиясы">
-							</div>
-							<div class="article-more__item-name">😘 30 күнде үй сатудың 3/1 құпиясы</div>
 						</a>
 							<a href="./posts/./xx-қayyrly-kүn-қalayyқx-mұnda.html" class="article-more__item">
 							<div class="article-more__item-pic">
 								<div class="article-more__item-pic-blind">
 									<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>132</span>
 								</div>
-								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82234340_108761900658007_8952337626418518331_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=axEDHObr5OoAX-cYORJ&oh=1b0740cb73354feb575655fb63e4c92f&oe=5EC50B1F" alt="👋 Қайырлы күн Қалайық, Мұнда">
+								<img src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82234340_108761900658007_8952337626418518331_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=pex7Ovivl5YAX_cXdx7&oh=be42bcac47111fba1ab311707d125416&oe=5EC50B1F" alt="👋 Қайырлы күн Қалайық, Мұнда">
 							</div>
 							<div class="article-more__item-name">👋 Қайырлы күн Қалайық, Мұнда</div>
 						</a>
