--- a/stories.html
+++ b/stories.html
@@ -107,7 +107,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xx-zharnama-zhіbermey-xx-tap" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/82697574_2488574724803465_3332618556511582612_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=zlGqNFYyi-AAX-lO5xq&oh=9e8834f8681cfb66786aa9a7ce55438b&oe=5ED5DB71" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="💰 Жарнама жібермей 🍋 тап!">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82491276_594100181151505_1238381754611812493_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=q8jNgMqgR3YAX_jMQWI&oh=e62b9b17e3ae28730acfa9e0eb369365&oe=5EC3203E" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="😮 Жарнама жібермей 🍋 тап!">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -116,6 +116,16 @@
 					<div class="items-item">
 						<label class="items-item__wrap items-item__check">
 							<input id="xx-zharnama-zhіbermey-xx-tap-1" type="checkbox" />
+							<div class="items-item__pic">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/82697574_2488574724803465_3332618556511582612_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=zlGqNFYyi-AAX-lO5xq&oh=9e8834f8681cfb66786aa9a7ce55438b&oe=5ED5DB71" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="💰 Жарнама жібермей 🍋 тап!">
+								<ul class="items-item__taglist">
+								</ul>
+							</div>
+						</label>
+					</div>
+					<div class="items-item">
+						<label class="items-item__wrap items-item__check">
+							<input id="xx-zharnama-zhіbermey-xx-tap-2" type="checkbox" />
 							<div class="items-item__pic">
 								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82344041_472286830346589_2121484091507824806_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=mT6lT4U2q18AX_xSpHM&oh=5e63a1a9f24c6ce49e4318a1ab7ac3d1&oe=5EC29881" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🤑 Жарнама жібермей 🍋 тап!">
 								<ul class="items-item__taglist">
@@ -127,7 +137,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xxmen-өmіrge-ne-үshіn-keldіm" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84029257_650884998982587_8857777222872158278_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=ZBM5XypeMIkAX8DorzQ&oh=ab097040efd7ef22affe77d4ecac35f4&oe=5EC0066A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🧐Мен өмірге не үшін келдім?">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/s1080x1080/84029257_650884998982587_8857777222872158278_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=103&_nc_ohc=8krA5XHLyXkAX-zaj7d&oh=9b6004604f7127f795534f5f74020ed5&oe=5EC0066A" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🧐Мен өмірге не үшін келдім?">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -137,7 +147,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xx-қayyrly-kүn-қalayyқx-mұnda" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82234340_108761900658007_8952337626418518331_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=axEDHObr5OoAX-cYORJ&oh=1b0740cb73354feb575655fb63e4c92f&oe=5EC50B1F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="👋 Қайырлы күн Қалайық, Мұнда">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82234340_108761900658007_8952337626418518331_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=pex7Ovivl5YAX_cXdx7&oh=be42bcac47111fba1ab311707d125416&oe=5EC50B1F" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="👋 Қайырлы күн Қалайық, Мұнда">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -157,7 +167,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="al-mіne-tegіn-үyren-de-basta" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/73387385_2628140830557121_864822904081207135_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=0SYVUljoscUAX_SE2BX&oh=cf935d2f8a4c0af67b94e883101bbe22&oe=5E3083D2" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Ал міне тегін үйрен де Баста!">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/73387385_2628140830557121_864822904081207135_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=0SYVUljoscUAX_SE2BX&oh=e8edff30d0372f8a1e62503cac8587a9&oe=5E31D552" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Ал міне тегін үйрен де Баста!">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -167,7 +177,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="arman---maқsat---іs--әreket--" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/75284446_193327011825233_3477503653942516291_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=EjgC7hto3h8AX-bCl-b&oh=7e9a49fb44460586108949ccbc7e9943&oe=5ED9AAD7" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="АРМАН-> МАҚСАТ-> ІС- ӘРЕКЕТ->">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/75284446_193327011825233_3477503653942516291_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=105&_nc_ohc=5oJaYcqFUQYAX9BqVx9&oh=2469faa3c15cb84b58d5286b12ad4f50&oe=5ED9AAD7" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="АРМАН-> МАҚСАТ-> ІС- ӘРЕКЕТ->">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -177,7 +187,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xx-post-saluғa-uaқyt-zhoқ" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/77401446_778145799273103_7373557858853546984_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=5Rfqt1IFd0cAX_AtlNy&oh=558d9b99392a3e78a4fcd3a0eefd57eb&oe=5ED1BA3C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="⚠️ Пост салуға уақыт жоқ!">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/77401446_778145799273103_7373557858853546984_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=QHQfSarSep8AX9euhu0&oh=9de537d283f1dc3ba942bdb3b3fc952f&oe=5ED1BA3C" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="⚠️ Пост салуға уақыт жоқ!">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -187,7 +197,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="zhaңalyқtyң-kөkesіx-tөmengі" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/75586246_166073588054248_6776733106266702904_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=1XECaCmNmBYAX9GaUyW&oh=a646c47a98e37ee0107edd76ea1a90d6&oe=5ED0C768" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Жаңалықтың көкесі, төменгі">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/75586246_166073588054248_6776733106266702904_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=104&_nc_ohc=DgDooWxWF_gAX9UzLMI&oh=31fdb1d405dc487f8ae6dda61adfe0d3&oe=5ED0C768" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Жаңалықтың көкесі, төменгі">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -217,7 +227,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xx-30-kүnde-үy-satudyң-3x1-құpiyasy" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/74385177_1591143844359853_3822974184782837967_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=EixKxTQU4msAX9j7682&oh=13f55152d47d1a80aa7914aa543feb68&oe=5ECD9C27" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="😘 30 күнде үй сатудың 3/1 құпиясы">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/74385177_1591143844359853_3822974184782837967_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=qZpfBrFbio0AX-YYh05&oh=1795f9741350af6e4c27827f623f07ec&oe=5ECD9C27" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="😘 30 күнде үй сатудың 3/1 құпиясы">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -227,7 +237,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xx-biznesmenge-kerektі-bіlіm" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/71187969_442627039709879_197456136209767097_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=PSIJuzjFUZoAX-BseQ4&oh=24d2854b06a85207aeabf96339ac4e80&oe=5EB5CB2D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="📚 Бизнесменге керекті білім">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/71187969_442627039709879_197456136209767097_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=111&_nc_ohc=Vhi6yecyaXgAX_7fMCL&oh=ebbf9cf79081624bf7971986a223e064&oe=5EB5CB2D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="📚 Бизнесменге керекті білім">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -247,7 +257,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xxxxx-men-өz-өmіrіmnің-egesіmіn" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/72610312_159173698509403_8484063782006537168_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=-LmZtTlldBIAX_8O4UY&oh=c6ad92ce529a1efabdbbca17cecdebc4&oe=5ED86FAC" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🦸‍♂️ Мен өз өмірімнің егесімін">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/72610312_159173698509403_8484063782006537168_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=OigehsUykRgAX_Ul9nT&oh=72b19dea08b3acbd1302d1dad5f9e57e&oe=5ED86FAC" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="🦸‍♂️ Мен өз өмірімнің егесімін">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -257,7 +267,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="xx-men-18-toldymx-allaғa-shүkіr" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/69959252_388029788512356_2966149528030807823_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=0XtQDcUjaZ0AX98Ap1l&oh=98c03755992e42a190879c9ba167d681&oe=5ED365E4" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="😃 Мен 18 толдым, Аллаға шүкір">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-2.cdninstagram.com/v/t51.2885-15/e35/69959252_388029788512356_2966149528030807823_n.jpg?_nc_ht=scontent-arn2-2.cdninstagram.com&_nc_cat=100&_nc_ohc=bzoiV_ptFsIAX-p6NIs&oh=0f3358ec18c62f037f06c187814a81d4&oe=5ED365E4" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="😃 Мен 18 толдым, Аллаға шүкір">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
@@ -267,17 +277,7 @@
 						<label class="items-item__wrap items-item__check">
 							<input id="bұl-menің-17-zhasymdaғy-eң-soңғy" type="checkbox" />
 							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/70520693_160429371700250_8939151866088050391_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=7KBfWOBcq6AAX_P6RnT&oh=36423e477d8c095e0f08cb8c58852755&oe=5ED2464D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Бұл менің 17 жасымдағы ең соңғы">
-								<ul class="items-item__taglist">
-								</ul>
-							</div>
-						</label>
-					</div>
-					<div class="items-item">
-						<label class="items-item__wrap items-item__check">
-							<input id="xx-menің-makhabbatym" type="checkbox" />
-							<div class="items-item__pic">
-								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/71096410_2424735274480954_3664506271447986917_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=110&_nc_ohc=1N-u4rrFFUEAX813CYm&oh=bb38760fff73a5456145dbaf42fd248b&oe=5E30629D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="😍 Менің махаббатым.">
+								<img class="" src="img/placeholder.png" data-src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/70520693_160429371700250_8939151866088050391_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=102&_nc_ohc=XFSmJ22reiIAX-HJJGL&oh=0afec94190c9cdc79cc4665a424fef5f&oe=5ED2464D" onerror="this.onerror=null; this.src='img/placeholder.png'" alt="Бұл менің 17 жасымдағы ең соңғы">
 								<ul class="items-item__taglist">
 								</ul>
 							</div>
