--- a/links.html
+++ b/links.html
@@ -468,16 +468,16 @@ color: #C6BB73;
 		color: #243154;
 ">⚠️ Пост салуға уақыт жоқ!</div>
 								</a>
-								<a href="./posts/./xx-қayyrly-kүn-қalayyқx-mұnda.html" class="article-more__item">
+								<a href="./posts/./xx-zharnama-zhіbermey-xx-tap-2.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>134</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82234340_108761900658007_8952337626418518331_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=Bu0rLQdpxaIAX-4F26Q&oh=c25cfccb3fe3af36727ef03ff1255c7d&oe=5EC50B1F" alt="👋 Қайырлы күн Қалайық, Мұнда">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82344041_472286830346589_2121484091507824806_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=fyH5VchiKqwAX_c-FUL&oh=a51add81c61db73b38e8b005086599ee&oe=5EC29881" alt="🤑 Жарнама жібермей 🍋 тап!">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #243154;
-">👋 Қайырлы күн Қалайық, Мұнда</div>
+">🤑 Жарнама жібермей 🍋 тап!</div>
 								</a>
 							</div>
 						</div>
