--- a/links.html
+++ b/links.html
@@ -424,17 +424,6 @@ color: #C6BB73;
 		color: #243154;
 ">💰 Жарнама жібермей 🍋 тап!</div>
 								</a>
-								<a href="./posts/./xx-x2020x-zhyly-zhetken-zhetіstіkterіm.html" class="article-more__item">
-									<div class="article-more__item-pic">
-										<div class="article-more__item-pic-blind">
-											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>154</span>
-										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/78813973_817282122053881_3899741372767422860_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=ryl44GtoKPYAX8FtCtW&oh=d7675cfd592915bb22bd7c2d96d019c4&oe=5EBB3AF6" alt="😊 «2020» жылы жеткен жетістіктерім">
-									</div>
-									<div class="article-more__item-name" style="
-		color: #243154;
-">😊 «2020» жылы жеткен жетістіктерім</div>
-								</a>
 								<a href="./posts/./xxүy-satudyң-3x2-құpiyasy.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
@@ -445,6 +434,17 @@ color: #C6BB73;
 									<div class="article-more__item-name" style="
 		color: #243154;
 ">☝️Үй сатудың 3/2 құпиясы</div>
+								</a>
+								<a href="./posts/./xx-x2020x-zhyly-zhetken-zhetіstіkterіm.html" class="article-more__item">
+									<div class="article-more__item-pic">
+										<div class="article-more__item-pic-blind">
+											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>154</span>
+										</div>
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/78813973_817282122053881_3899741372767422860_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=101&_nc_ohc=ryl44GtoKPYAX8FtCtW&oh=d7675cfd592915bb22bd7c2d96d019c4&oe=5EBB3AF6" alt="😊 «2020» жылы жеткен жетістіктерім">
+									</div>
+									<div class="article-more__item-name" style="
+		color: #243154;
+">😊 «2020» жылы жеткен жетістіктерім</div>
 								</a>
 								<a href="./posts/./arman---maқsat---іs--әreket--.html" class="article-more__item">
 									<div class="article-more__item-pic">
@@ -468,16 +468,16 @@ color: #C6BB73;
 		color: #243154;
 ">⚠️ Пост салуға уақыт жоқ!</div>
 								</a>
-								<a href="./posts/./xx-қayyrly-kүn-қalayyқx-mұnda.html" class="article-more__item">
+								<a href="./posts/./xx-zharnama-zhіbermey-xx-tap-2.html" class="article-more__item">
 									<div class="article-more__item-pic">
 										<div class="article-more__item-pic-blind">
 											<span><i class="fa fa-comment-o" aria-hidden="true"></i>0</span> <span><i class="fa fa-heart" aria-hidden="true"></i>134</span>
 										</div>
-										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82234340_108761900658007_8952337626418518331_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=107&_nc_ohc=Bu0rLQdpxaIAX-4F26Q&oh=c25cfccb3fe3af36727ef03ff1255c7d&oe=5EC50B1F" alt="👋 Қайырлы күн Қалайық, Мұнда">
+										<img class="js-now-lazy" src="https://scontent-arn2-1.cdninstagram.com/v/t51.2885-15/e35/82344041_472286830346589_2121484091507824806_n.jpg?_nc_ht=scontent-arn2-1.cdninstagram.com&_nc_cat=109&_nc_ohc=qMOA-yin-hMAX9Ophmv&oh=1a97f6d9ed1bd8c735f7c3de46a41b31&oe=5EC29881" alt="🤑 Жарнама жібермей 🍋 тап!">
 									</div>
 									<div class="article-more__item-name" style="
 		color: #243154;
-">👋 Қайырлы күн Қалайық, Мұнда</div>
+">🤑 Жарнама жібермей 🍋 тап!</div>
 								</a>
 							</div>
 						</div>
